--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
   <p><b>注意：</b>一定要按照link-visited-hover-active的顺序定义和控制链接，否则将会无效</p>
   <p><b>注意：</b>git测试页面</p>
   <p><a>Git分布式版本控制软件</a></p>
+  <p>git创建dev分支</p>
+  <p>git创建bug分支</p>
+  <p>git创建dev分支1</p>
  </body>
 </html>
